--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -23,6 +23,9 @@ dateFormat = "January 2, 2006"
 since = 2019
 # Git Commit in Footer, uncomment the line below to enable it
 commit = "https://github.com/luizdepra/hugo-coder/tree/"
+jobTitle = "Delivery Manager"
+employer = "Devexperts"
+employerURL = "https://devexperts.com/"
 # Right To Left, shift content direction for languagues such as Arabic
 rtl = false
 # Specify light/dark colorscheme
